# NOTE-1

./: CMakeLists.txt  CppNote  IC  WIFI技术.txt  bashrc  cmakeNote  gcc  git3.py  learningNote  linux  linuxNote  meeting 11.12.h  networkTechnique.txt  noteTemp  python  raspberrypiNote  shellNote  thingsCanDo  urlCollection  vim.txt  vimiunm  网络技术.txt  网络连接.txt
C++Note/: IO.txt  函数.txt  常用.txt  结构.py
PythonNote/: note Julia.jl  note_命令行.py  note_编码格式.py  良好的注释习惯.py
PythonNote/python/: note 小技巧.py  note0_杂项与运算.py  note1.1_字符串.py  note1.3_元组.py  note1.4_字典.py  note10_异常(待).py  note11_面向对象.py  note12_函数式编程.py  note6_模块.py  note9_os.py  setup.py  元类.py
PythonNote/安装备注/: 备注.py
Python笔记/: git2.py  note_bokeh.py  note_git使用说明  库
Python笔记/python/: note 多任务.py  note1.0_变量类型.py  note1.2_列表与数据结构.py  note2_基本函数.py  note3_迭代器.py  note4_函数.py  note5_正则.py  note7_输出与文件读取.py  note8_各种函数.py  note_常用片段.py  note_库
编程语言笔记/: 代码行数记录.txt
